--- a/cowrie.cfg.dist
+++ b/cowrie.cfg.dist
@@ -16,18 +16,34 @@
 # IP addresses to listen for incoming SSH connections.
 #
 # (default: 0.0.0.0) = any IPv4 address
-#listen_addr = 0.0.0.0
+#listen_ssh_addr = 0.0.0.0
 # (use :: for listen to all IPv6 and IPv4 addresses)
-#listen_addr = ::
+#listen_ssh_addr = ::
 
 # Port to listen for incoming SSH connections.
 # To listen to IPv6, set this to "::"
 #
 # (default: 2222)
-#listen_port = 2222
+#listen_ssh_port = 2222
 
 # Source Port to report in logs (useful if you use iptables to forward ports to cowrie)
 #reported_ssh_port = 22
+
+# IP addresses to listen for incoming Telnet connections.
+#
+# (default: 0.0.0.0) = any IPv4 address
+#listen_telnet_addr = 0.0.0.0
+# (use :: for listen to all IPv6 and IPv4 addresses)
+#listen_telnet_addr = ::
+
+# Port to listen for incoming Telnet connections.
+# To listen to IPv6, set this to "::"
+#
+# (default: 2223)
+#listen_telnet_port = 2223
+
+# Source Port to report in logs (useful if you use iptables to forward ports to cowrie)
+#reported_telnet_port = 23
 
 # Enable to log the public IP of the honeypot (useful if listening on 127.0.0.1)
 # IP address is obtained by querying http://myip.threatstream.com
